--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -48,6 +48,7 @@
     <script src="{{ url_for('static', filename='js/timer.js') }}"></script>
     <script src="{{ url_for('static', filename='js/page_main.js') }}"></script>
     <script src="{{ url_for('static', filename='js/page_calendar.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/effects.js') }}"></script>
     <script src="{{ url_for('static', filename='js/app.js') }}"></script>
 </body>
 </html>
